@@ -29,6 +29,7 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
@@ -75,19 +76,23 @@ public final class SystemUtils {
         return managedProcess.getProcess().waitFor();
     }
 
+    private static final Duration DEFAULT_MAX_WAIT_TIME = Duration.ofSeconds(15);
+
     public static String run(String... command) throws Exception {
-        return run(Arrays.asList(command),
-                inputStream -> IOUtils.readFullyAsString(inputStream, OperatingSystem.NATIVE_CHARSET));
+        return run(List.of(command), DEFAULT_MAX_WAIT_TIME);
+    }
+
+    public static String run(List<String> command, Duration maxWaitTime) throws Exception {
+        return run(command, inputStream -> IOUtils.readFullyAsString(inputStream, OperatingSystem.NATIVE_CHARSET), maxWaitTime);
     }
 
     public static <T> T run(List<String> command, ExceptionalFunction<InputStream, T, ?> convert) throws Exception {
-        File nul = OperatingSystem.CURRENT_OS == OperatingSystem.WINDOWS
-                ? new File("NUL")
-                : new File("/dev/null");
+        return run(command, convert, DEFAULT_MAX_WAIT_TIME);
+    }
 
+    public static <T> T run(List<String> command, ExceptionalFunction<InputStream, T, ?> convert, Duration maxWaitTime) throws Exception {
         Process process = new ProcessBuilder(command)
-                .redirectInput(nul)
-                .redirectError(nul)
+                .redirectError(ProcessBuilder.Redirect.DISCARD)
                 .start();
         try {
             InputStream inputStream = process.getInputStream();
@@ -95,7 +100,7 @@ public final class SystemUtils {
                     Lang.wrap(() -> convert.apply(inputStream)),
                     Schedulers.io());
 
-            if (!process.waitFor(15, TimeUnit.SECONDS))
+            if (!process.waitFor(maxWaitTime.toMillis(), TimeUnit.MILLISECONDS))
                 throw new TimeoutException();
 
             if (process.exitValue() != 0)
@@ -112,7 +117,7 @@ public final class SystemUtils {
         return Thread.currentThread().getContextClassLoader().getResource("com/sun/tools/attach/VirtualMachine.class") != null;
     }
 
-    private static void onLogLine(String log) {
+    public static void onLogLine(String log) {
         LOG.info(log);
     }
 }
